--- a/Malin Data Processing/DataProcessing.xaml
+++ b/Malin Data Processing/DataProcessing.xaml
@@ -12,24 +12,37 @@
         <ComboBox HorizontalAlignment="Left" Margin="10,41,0,0" VerticalAlignment="Top" Width="43"/>
         <ComboBox HorizontalAlignment="Left" Margin="70,41,0,0" VerticalAlignment="Top" Width="43"/>
         <Button Content="Load Sensor Data" HorizontalAlignment="Left" Height="25" Margin="10,76,0,0" VerticalAlignment="Top" Width="155" Click="Button_Click"/>
-        <Button Content="Search Iterative" HorizontalAlignment="Left" Height="24" Margin="202,64,0,0" VerticalAlignment="Top" Width="115" Click="Button_Click"/>
-        <Button Content="Search Recursive" HorizontalAlignment="Left" Height="24" Margin="202,102,0,0" VerticalAlignment="Top" Width="115" Click="Button_Click"/>
-        <Button Content="Sort Selection" HorizontalAlignment="Left" Height="24" Margin="202,140,0,0" VerticalAlignment="Top" Width="115" Click="Button_Click"/>
-        <Button Content="Sort Inversion" HorizontalAlignment="Left" Height="24" Margin="202,182,0,0" VerticalAlignment="Top" Width="115" Click="Button_Click"/>
-        <TextBox HorizontalAlignment="Left" Height="24" Margin="322,64,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="113"/>
-        <TextBox HorizontalAlignment="Left" Height="24" Margin="322,102,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="113"/>
-        <TextBox HorizontalAlignment="Left" Height="24" Margin="322,140,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="113"/>
-        <TextBox HorizontalAlignment="Left" Height="24" Margin="322,182,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="113"/>
-        <TextBox HorizontalAlignment="Left" Height="24" Margin="204,23,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="113"/>
-        <Button Content="Search Iterative" HorizontalAlignment="Left" Height="24" Margin="507,64,0,0" VerticalAlignment="Top" Width="115" Click="Button_Click"/>
-        <Button Content="Search Recursive" HorizontalAlignment="Left" Height="24" Margin="507,102,0,0" VerticalAlignment="Top" Width="115" Click="Button_Click"/>
-        <Button Content="Sort Selection" HorizontalAlignment="Left" Height="24" Margin="507,140,0,0" VerticalAlignment="Top" Width="115" Click="Button_Click"/>
-        <Button Content="Sort Inversion" HorizontalAlignment="Left" Height="24" Margin="507,182,0,0" VerticalAlignment="Top" Width="115" Click="Button_Click"/>
-        <TextBox HorizontalAlignment="Left" Height="24" Margin="627,64,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="113"/>
-        <TextBox HorizontalAlignment="Left" Height="24" Margin="627,102,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="113"/>
-        <TextBox HorizontalAlignment="Left" Height="24" Margin="627,140,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="113"/>
-        <TextBox HorizontalAlignment="Left" Height="24" Margin="627,182,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="113"/>
-        <TextBox HorizontalAlignment="Left" Height="24" Margin="509,23,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="113"/>
+        <Button Content="Search Iterative" HorizontalAlignment="Left" Height="24" Margin="186,87,0,0" VerticalAlignment="Top" Width="115" Click="Button_Click"/>
+        <TextBox HorizontalAlignment="Left" Height="24" Margin="267,46,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="55"/>
+        <ListBox d:ItemsSource="{d:SampleData ItemCount=5}" Margin="388,41,316,25"/>
+        <ListView d:ItemsSource="{d:SampleData ItemCount=5}" Margin="10,114,635,25">
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn/>
+                </GridView>
+            </ListView.View>
+        </ListView>
+        <Label Content="286 Ticks" HorizontalAlignment="Left" Height="28" Margin="306,85,0,0" VerticalAlignment="Top" Width="80"/>
+        <Label Content="Search Target" HorizontalAlignment="Left" Margin="186,44,0,0" VerticalAlignment="Top"/>
+        <Button Content="Search Recursive" HorizontalAlignment="Left" Height="24" Margin="186,133,0,0" VerticalAlignment="Top" Width="115" Click="Button_Click"/>
+        <Label Content="294 Ticks" HorizontalAlignment="Left" Height="28" Margin="306,131,0,0" VerticalAlignment="Top" Width="80"/>
+        <Button Content="Sort Selection" HorizontalAlignment="Left" Height="24" Margin="186,177,0,0" VerticalAlignment="Top" Width="115" Click="Button_Click"/>
+        <Label Content="190 Millisecs" HorizontalAlignment="Left" Height="28" Margin="306,175,0,0" VerticalAlignment="Top" Width="80"/>
+        <Button Content="Sort Insertion" HorizontalAlignment="Left" Height="24" Margin="186,219,0,0" VerticalAlignment="Top" Width="115" Click="Button_Click"/>
+        <Label Content="110 Millisecs" HorizontalAlignment="Left" Height="28" Margin="306,217,0,0" VerticalAlignment="Top" Width="80"/>
+        <Label Content="Sensor A" HorizontalAlignment="Left" Height="25" Margin="197,10,0,0" VerticalAlignment="Top" Width="70"/>
+        <Label Content="Sensor B" HorizontalAlignment="Left" Height="25" Margin="550,11,0,0" VerticalAlignment="Top" Width="70"/>
+        <Button Content="Search Iterative" HorizontalAlignment="Left" Height="24" Margin="505,89,0,0" VerticalAlignment="Top" Width="115" Click="Button_Click"/>
+        <TextBox HorizontalAlignment="Left" Height="24" Margin="586,48,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="55"/>
+        <Label Content="286 Ticks" HorizontalAlignment="Left" Height="28" Margin="625,87,0,0" VerticalAlignment="Top" Width="89"/>
+        <Label Content="Search Target" HorizontalAlignment="Left" Margin="505,46,0,0" VerticalAlignment="Top"/>
+        <Button Content="Search Recursive" HorizontalAlignment="Left" Height="24" Margin="505,135,0,0" VerticalAlignment="Top" Width="115" Click="Button_Click"/>
+        <Label Content="294 Ticks" HorizontalAlignment="Left" Height="28" Margin="625,133,0,0" VerticalAlignment="Top" Width="89"/>
+        <Button Content="Sort Selection" HorizontalAlignment="Left" Height="24" Margin="505,179,0,0" VerticalAlignment="Top" Width="115" Click="Button_Click"/>
+        <Label Content="190 Millisecs" HorizontalAlignment="Left" Height="28" Margin="625,177,0,0" VerticalAlignment="Top" Width="89"/>
+        <Button Content="Sort Insertion" HorizontalAlignment="Left" Height="24" Margin="505,221,0,0" VerticalAlignment="Top" Width="115" Click="Button_Click"/>
+        <Label Content="110 Millisecs" HorizontalAlignment="Left" Height="28" Margin="625,219,0,0" VerticalAlignment="Top" Width="89"/>
+        <ListBox d:ItemsSource="{d:SampleData ItemCount=5}" Margin="694,44,10,22"/>
 
     </Grid>
 </Window>
