--- a/Malin Data Processing/DataProcessing.xaml
+++ b/Malin Data Processing/DataProcessing.xaml
@@ -6,28 +6,14 @@
         xmlns:local="clr-namespace:Malin_Data_Processing"
         mc:Ignorable="d"
         Title="Data Processing" Height="470" Width="825">
-    <Grid Margin="0,0,0,-6">
+    <Grid Margin="0,0,0,-6" Loaded="WindowLoaded">
         <Label Content="Sigma" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
         <Label Content="Mu" HorizontalAlignment="Left" Margin="78,10,0,0" VerticalAlignment="Top"/>
-        <ComboBox x:Name="Sigma" HorizontalAlignment="Left" Margin="10,41,0,0" VerticalAlignment="Top" Width="43" SelectedIndex="0">
-            <ComboBoxItem Content="10"/>
-            <ComboBoxItem Content="15"/>
-            <ComboBoxItem Content="20"/>
-        </ComboBox>
-        <ComboBox x:Name="Mu" HorizontalAlignment="Left" Margin="70,41,0,0" VerticalAlignment="Top" Width="43" SelectedIndex="3">
-            <ComboBoxItem Content="35"/>
-            <ComboBoxItem Content="40"/>
-            <ComboBoxItem Content="45"/>
-            <ComboBoxItem Content="50"/>
-            <ComboBoxItem Content="55"/>
-            <ComboBoxItem Content="60"/>
-            <ComboBoxItem Content="65"/>
-            <ComboBoxItem Content="70"/>
-            <ComboBoxItem Content="75"/>
-        </ComboBox>
+        <ComboBox x:Name="Sigma" HorizontalAlignment="Left" Margin="10,41,0,0" VerticalAlignment="Top" Width="43" SelectedIndex="0"/>
+        <ComboBox x:Name="Mu" HorizontalAlignment="Left" Margin="70,41,0,0" VerticalAlignment="Top" Width="43" SelectedIndex="3"/>
         <Button x:Name="ButtonLoadSensorData" Content="Load Sensor Data" HorizontalAlignment="Left" Height="25" Margin="10,76,0,0" VerticalAlignment="Top" Width="155" Click="ButtonLoadSensorData_Click"/>
         <Button x:Name="ButtonASearchIterative" Content="Search Iterative" HorizontalAlignment="Left" Height="24" Margin="186,87,0,0" VerticalAlignment="Top" Width="115" Click="ButtonASearchIterative_Click"/>
-        <TextBox HorizontalAlignment="Left" Height="24" Margin="267,46,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="55"/>
+        <TextBox x:Name="TextBoxASearch" HorizontalAlignment="Left" Height="24" Margin="267,46,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="55" PreviewTextInput="TextBoxSearch_PreviewTextInput"/>
         <ListBox d:ItemsSource="{d:SampleData ItemCount=5}" Margin="386,41,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Height="368" Width="99"/>
         <ListView d:ItemsSource="{d:SampleData ItemCount=5}" Margin="10,114,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Height="295" Width="155">
             <ListView.View>
@@ -48,7 +34,7 @@
         <Label Content="Sensor A" HorizontalAlignment="Left" Height="25" Margin="224,1,0,0" VerticalAlignment="Top" Width="70" FontWeight="Bold" FontSize="14"/>
         <Label Content="Sensor B" HorizontalAlignment="Left" Height="25" Margin="550,0,0,0" VerticalAlignment="Top" Width="70" FontWeight="Bold" FontSize="14"/>
         <Button x:Name="ButtonBSearchIterative" Content="Search Iterative" HorizontalAlignment="Left" Height="24" Margin="492,89,0,0" VerticalAlignment="Top" Width="115" Click="ButtonBSearchIterative_Click"/>
-        <TextBox HorizontalAlignment="Left" Height="24" Margin="586,48,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="55"/>
+        <TextBox x:Name="TextBoxBSearch" HorizontalAlignment="Left" Height="24" Margin="586,48,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="55" PreviewTextInput="TextBoxSearch_PreviewTextInput"/>
         <Label Content="286 Ticks" HorizontalAlignment="Left" Height="28" Margin="612,87,0,0" VerticalAlignment="Top" Width="77"/>
         <Label Content="Search Target" HorizontalAlignment="Left" Margin="505,46,0,0" VerticalAlignment="Top"/>
         <Button x:Name="ButtonBSearchRecursive" Content="Search Recursive" HorizontalAlignment="Left" Height="24" Margin="492,135,0,0" VerticalAlignment="Top" Width="115" Click="ButtonBSearchRecursive_Click"/>
