--- a/Malin Data Processing/DataProcessing.xaml
+++ b/Malin Data Processing/DataProcessing.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:Malin_Data_Processing"
         mc:Ignorable="d"
         Title="Data Processing" Height="470" Width="825">
-    <Grid Margin="0,0,0,-6" Loaded="WindowLoaded">
+    <Grid Margin="0,0,0,-6">
         <Label Content="Sigma" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
         <Label Content="Mu" HorizontalAlignment="Left" Margin="78,10,0,0" VerticalAlignment="Top"/>
         <ComboBox x:Name="Sigma" HorizontalAlignment="Left" Margin="10,41,0,0" VerticalAlignment="Top" Width="43" SelectedIndex="0"/>
@@ -14,36 +14,36 @@
         <Button x:Name="ButtonLoadSensorData" Content="Load Sensor Data" HorizontalAlignment="Left" Height="25" Margin="10,76,0,0" VerticalAlignment="Top" Width="155" Click="ButtonLoadSensorData_Click"/>
         <Button x:Name="ButtonASearchIterative" Content="Search Iterative" HorizontalAlignment="Left" Height="24" Margin="186,87,0,0" VerticalAlignment="Top" Width="115" Click="ButtonASearchIterative_Click"/>
         <TextBox x:Name="TextBoxASearch" HorizontalAlignment="Left" Height="24" Margin="267,46,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="55" PreviewTextInput="TextBoxSearch_PreviewTextInput"/>
-        <ListBox d:ItemsSource="{d:SampleData ItemCount=5}" Margin="386,41,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Height="368" Width="99"/>
+        <ListBox x:Name="ListBoxA" d:ItemsSource="{d:SampleData ItemCount=5}" Margin="386,41,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Height="368" Width="99"/>
         <ListView x:Name="RawData" d:ItemsSource="{d:SampleData ItemCount=5}" Margin="10,114,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Height="295" Width="155">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="Sesnor A" Width="80" DisplayMemberBinding="{Binding SensorA}"/>
-                    <GridViewColumn Header="Sesnor B" Width="80" DisplayMemberBinding="{Binding SensorA}"/>
+                    <GridViewColumn Header="Sesnor B" Width="80" DisplayMemberBinding="{Binding SensorB}"/>
                 </GridView>
             </ListView.View>
         </ListView>
-        <Label Content="286 Ticks" HorizontalAlignment="Left" Height="28" Margin="306,85,0,0" VerticalAlignment="Top" Width="80"/>
+        <Label x:Name="TimeIterativeA" Content="Ticks" HorizontalAlignment="Left" Height="28" Margin="306,85,0,0" VerticalAlignment="Top" Width="80"/>
         <Label Content="Search Target" HorizontalAlignment="Left" Margin="186,44,0,0" VerticalAlignment="Top"/>
         <Button x:Name="ButtonASearchRecursive" Content="Search Recursive" HorizontalAlignment="Left" Height="24" Margin="186,133,0,0" VerticalAlignment="Top" Width="115" Click="ButtonASearchRecursive_Click"/>
-        <Label Content="294 Ticks" HorizontalAlignment="Left" Height="28" Margin="306,131,0,0" VerticalAlignment="Top" Width="80"/>
+        <Label x:Name="TimeRecursiveA" Content="Ticks" HorizontalAlignment="Left" Height="28" Margin="306,131,0,0" VerticalAlignment="Top" Width="80"/>
         <Button x:Name="ButtonASortSelection" Content="Sort Selection" HorizontalAlignment="Left" Height="24" Margin="186,177,0,0" VerticalAlignment="Top" Width="115" Click="ButtonASortSelection_Click"/>
-        <Label Content="190 Millisecs" HorizontalAlignment="Left" Height="28" Margin="306,175,0,0" VerticalAlignment="Top" Width="80"/>
+        <Label x:Name="TimeSelectionA" Content="Millisecs" HorizontalAlignment="Left" Height="28" Margin="306,175,0,0" VerticalAlignment="Top" Width="80"/>
         <Button x:Name="ButtonASortInsertion" Content="Sort Insertion" HorizontalAlignment="Left" Height="24" Margin="186,219,0,0" VerticalAlignment="Top" Width="115" Click="ButtonASortInsertion_Click"/>
-        <Label Content="110 Millisecs" HorizontalAlignment="Left" Height="28" Margin="306,217,0,0" VerticalAlignment="Top" Width="80"/>
+        <Label x:Name="TimeInsertionA" Content="Millisecs" HorizontalAlignment="Left" Height="28" Margin="306,217,0,0" VerticalAlignment="Top" Width="80"/>
         <Label Content="Sensor A" HorizontalAlignment="Left" Height="25" Margin="224,1,0,0" VerticalAlignment="Top" Width="70" FontWeight="Bold" FontSize="14"/>
         <Label Content="Sensor B" HorizontalAlignment="Left" Height="25" Margin="550,0,0,0" VerticalAlignment="Top" Width="70" FontWeight="Bold" FontSize="14"/>
         <Button x:Name="ButtonBSearchIterative" Content="Search Iterative" HorizontalAlignment="Left" Height="24" Margin="492,89,0,0" VerticalAlignment="Top" Width="115" Click="ButtonBSearchIterative_Click"/>
         <TextBox x:Name="TextBoxBSearch" HorizontalAlignment="Left" Height="24" Margin="586,48,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="55" PreviewTextInput="TextBoxSearch_PreviewTextInput"/>
-        <Label Content="286 Ticks" HorizontalAlignment="Left" Height="28" Margin="612,87,0,0" VerticalAlignment="Top" Width="77"/>
+        <Label x:Name="TimeIterativeB" Content="Ticks" HorizontalAlignment="Left" Height="28" Margin="612,87,0,0" VerticalAlignment="Top" Width="77"/>
         <Label Content="Search Target" HorizontalAlignment="Left" Margin="505,46,0,0" VerticalAlignment="Top"/>
         <Button x:Name="ButtonBSearchRecursive" Content="Search Recursive" HorizontalAlignment="Left" Height="24" Margin="492,135,0,0" VerticalAlignment="Top" Width="115" Click="ButtonBSearchRecursive_Click"/>
-        <Label Content="294 Ticks" HorizontalAlignment="Left" Height="28" Margin="612,133,0,0" VerticalAlignment="Top" Width="77"/>
+        <Label x:Name="TimeRecursiveB" Content="Ticks" HorizontalAlignment="Left" Height="28" Margin="612,133,0,0" VerticalAlignment="Top" Width="77"/>
         <Button x:Name="ButtonBSortSelection" Content="Sort Selection" HorizontalAlignment="Left" Height="24" Margin="492,179,0,0" VerticalAlignment="Top" Width="115" Click="ButtonBSortSelection_Click"/>
-        <Label Content="190 Millisecs" HorizontalAlignment="Left" Height="28" Margin="612,177,0,0" VerticalAlignment="Top" Width="77"/>
+        <Label x:Name="TimeSelectionB" Content="Millisecs" HorizontalAlignment="Left" Height="28" Margin="612,177,0,0" VerticalAlignment="Top" Width="77"/>
         <Button x:Name="ButtonBSortInsertion" Content="Sort Insertion" HorizontalAlignment="Left" Height="24" Margin="492,221,0,0" VerticalAlignment="Top" Width="115" Click="ButtonBSortInsertion_Click"/>
-        <Label Content="110 Millisecs" HorizontalAlignment="Left" Height="28" Margin="612,219,0,0" VerticalAlignment="Top" Width="77"/>
-        <ListBox d:ItemsSource="{d:SampleData ItemCount=5}" Margin="694,44,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Height="365" Width="96"/>
+        <Label x:Name="TimeInsertionB" Content="Millisecs" HorizontalAlignment="Left" Height="28" Margin="612,219,0,0" VerticalAlignment="Top" Width="77"/>
+        <ListBox x:Name="ListBoxB" d:ItemsSource="{d:SampleData ItemCount=5}" Margin="694,44,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Height="365" Width="96"/>
 
     </Grid>
 </Window>
